--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,5 @@
-@(message: String)
+@(message: String)@main("Coffee") {
 
-@main("Welcome to Play") {
-
-    @play20.welcome(message)
+    @message
 
 }
