--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,7 +1,4 @@
-@(title: String)(content: Html)
-
-<!DOCTYPE html>
-
+@(title: String)(content: Html)<!DOCTYPE html>
 <html lang="en">
     <head>
         <title>@title</title>
