--- a/app/views/Application/main.scala.html
+++ b/app/views/Application/main.scala.html
@@ -1,4 +1,5 @@
-@(title: String)(content: Html)<!DOCTYPE html>
+@(title: String)(content: Html)
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <title>@title</title>
