Expose sample pages from index

--- a/app/views/Application/index.scala.html
+++ b/app/views/Application/index.scala.html
@@ -1,6 +1,5 @@
-@(message: String)
 @main("Coffee") {
-
-    @message
-
+    <a href="/flavors">Flavors</a><br />
+    <a href="/flavor">Sample flavor</a><br />
+    <a href="/roasting">Sample roasting</a><br />
 }
