--- a/app/views/Application/flavor.scala.html
+++ b/app/views/Application/flavor.scala.html
@@ -1,4 +1,4 @@
-@(flavor: Flavor, roastings: List[Roasting])
+@(flavor: Flavor, roastings: Seq[Roasting])
 @main("Coffee") {
 
     <h2>@flavor.name</h2>
