Expose database-stored roastings in application

--- a/app/views/Application/flavor.scala.html
+++ b/app/views/Application/flavor.scala.html
@@ -5,7 +5,7 @@
 
     <ul>
         @for(roasting <- roastings) {
-            <li>@roasting.formatDuration</li>
+            <li><a href="/roasting/@roasting.id">@roasting.formatDuration</a></li>
         }
     </ul>
 
