--- a/app/views/RoastingsController/show.scala.html
+++ b/app/views/RoastingsController/show.scala.html
@@ -1,5 +1,5 @@
 @(flavor: Flavor, roasting: Roasting, ratingOption: Option[Rating])
-@main("Coffee") {
+@views.html.Application.main("Coffee") {
 
     <h2>@flavor.name</h2>
 
