--- a/app/views/FlavorsController/show.scala.html
+++ b/app/views/FlavorsController/show.scala.html
@@ -1,11 +1,11 @@
 @(flavor: Flavor, roastings: Seq[Roasting])
-@main("Coffee") {
+@views.html.Application.main("Coffee") {
 
     <h2>@flavor.name</h2>
 
     <ul>
         @for(roasting <- roastings) {
-            <li><a href="/roasting/@roasting.id">@roasting.formatDuration</a></li>
+            <li><a href="/roastings/@roasting.id">@roasting.formatDuration</a></li>
         }
     </ul>
 
