--- a/app/views/FlavorsController/list.scala.html
+++ b/app/views/FlavorsController/list.scala.html
@@ -5,7 +5,7 @@
 
     <ul>
         @for(flavor <- flavors) {
-            <li><a href="/flavors/@flavor.id">@flavor.name</a></li>
+            <li><a href="@routes.FlavorsController.show(flavor.id.get)">@flavor.name</a></li>
         }
     </ul>
 
